on proj-problem.css, fixed images & txt positionning on classics devices, need to review padding-bottom of txt <p> on mobile

--- a/app/assets/styles/abstracts/_utilities.css
+++ b/app/assets/styles/abstracts/_utilities.css
@@ -56,6 +56,7 @@
     &-sm, -md, -xs, -lg
     handled with media mixins
 */
+/*
 .u-pt {
   &-xs { 
     padding-top: 1rem ;
@@ -71,7 +72,19 @@
     @mixin atMedium { padding-top: 37.5rem; }
   }
 }
+*/
 
+
+.u-pt {
+  &-xs {  padding-top: 3rem;  }
+  &-sm {  padding-top: 5rem; }
+  &-md {  padding-top: 12.5rem; }
+  &-lg { 
+    padding-top: 12.5rem;
+
+    @mixin atMedium { padding-top: 37.5rem; }
+  }
+}
 .u-pb {
   @mixin atSmall { padding-bottom: 1rem;  }
 }
